@@ -19,6 +19,7 @@ New features:
  - [ZBX-3338] updated Ukrainian translation; thanks to zalex_ua (Richlv)
 
 Bug fixes:
+ - [ZBX-3550] enforce authentication for API, if auth param is not empty (Vedmak)
  - [ZBX-3500] added "change" link to "clock" element in screen configuration (KB)
  - [ZBX-3500] fixed infinite loop when screen was added as an element of another screen (KB)
  - [ZBX-3500] fixed database query algorithm when saving maintenance (KB)
